put() method added for twitter URL collector
Will fill the queue for extractor